Fix for various failing tests (#5296)
* Account for fake failures due to altered recovery 
* Delete duplicate test
* Avoid running standard tests enabling preview.